--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mikec-git.github.io/portfolio_frontend",
+  "homepage": "https://github.com/mikec-git/portfolio_frontend",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
