--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mikec-git.github.io/portfolio_frontend/",
+  "homepage": "https://www.mikechoi.dev/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
